<resources>

    <!-- App Screens-->
    <string name="app_name">AstroFeed</string>
    <string name="title_news">News</string>
    <string name="title_spacecraft">Spacecraft</string>
    <string name="title_launches">Launches</string>
    <string name="title_rockets">Rockets</string>
    <string name="title_settings">Settings</string>
    <string name="title_company">SpaceX</string>
    <string name="title_about">About</string>

    <string name="title_mission">Mission</string>
    <string name="title_mission_status">Launch Status</string>
    <string name="title_launch_site">Launch Site</string>
    <string name="title_launch_details">Launch Details</string>
    <string name="title_launch_go">Launch is a Go!</string>

    <!-- About Dev Page -->
    <string name="action_rate_app">Give us a rating</string>
    <string name="action_give_feedback">Let us know how we can improve</string>
    <string name="action_open_source">Libraries we use</string>
    <string name="action_device_info">Device Info</string>

    <!-- Social Media Links -->
    <string name="instagram">Follow me on Instagram</string>
    <string name="github">Follow me on Github</string>
    <string name="linkedin">Connect with me on LinkedIn</string>
    <string name="developer_instagram_url" translatable="false">https://www.instagram.com/drewstephensdesigns/</string>
    <string name="developer_github_url" translatable="false">https://github.com/drewstephensdesigns</string>
    <string name="developer_linkedin_url" translatable="false">https://www.linkedin.com/in/drewstephens/</string>

    <!-- Action Strings -->
    <string name="action_sort">Sort</string>
    <string name="action_vehicle_specs">Vehicle Specs</string>
    <string name="action_change_theme">Theme</string>
    <string name="action_view_article">View Article</string>

    <!-- Originator Long Form Text -->
    <string name="afetr">Air Force Eastern Test Range (Florida)</string>
    <string name="afwtr">Air Force Western Test Range (California)</string>
    <string name="text_status_cancelled">Cancelled</string>
    <string name="text_status_development">In Development</string>

    <!-- API Source -->
    <string name="spacex_api">Space X API</string>
    <string name="spacex_api_url" translatable="false">https://github.com/r-spacex/SpaceX-API</string>

    <string name="spacex_website">SpaceX Website</string>
    <string name="spacex_url" translatable="false">https://www.spacex.com</string>

    <string name="spacex_flickr_website">SpaceX Flickr</string>
    <string name="spacex_flickr_url">https://www.flickr.com/photos/spacex/</string>

    <!-- Content Descriptions -->
    <string name="starlink_iv_cd">Image view for Starlink missions</string>
    <string name="detail_fragment_image_content_desc">Rocket Image from Flickr</string>
    <string name="fab_filter_cd">Filter Selection</string>
    <string name="description_placeholder">Falcon 9 is a two-stage rocket designed and manufactured by SpaceX for the reliable and safe transport of satellites</string>
    <string name="tab_content_description">Tablayout</string>

    <!-- Placeholders -->
    <string name="stages_placeholder">Stages: %s</string>
    <string name="empty_content_sign">0</string>
    <string name="rocket_cost">$ %s</string>
    <string name="rocket_thrust">%s kN</string>
    <string name="height_placeholder">%s Feet</string>
    <string name="company_valuation">$ %1$s</string>
    <string name="company_founder">Founded By %s</string>
    <string name="company_address">%1$s, %2$s, %3$s</string>
    <string name="article_published_at">Published: %s</string>
    <string name="username_placeholder">u/%1$s</string>
    <string name="subreddit_placeholder">r/%1$s</string>
    <string name="date_placeholder">Posted: %1$s</string>
    <string name="mission_type">Mission Type: %1$s</string>
    <string name="orbit_type">Orbit: %1$s</string>
    <string name="launch_time_local">%1$s (Local Time)</string>

    <!-- Headers -->
    <string name="title_status_header">Active</string>
    <string name="title_capsule_status_header">Status</string>
    <string name="success_rating">Success Rating</string>
    <string name="engine_type">Engine Type</string>
    <string name="rocket_type_header">Type</string>
    <string name="boosters">Boosters</string>
    <string name="first_flight">First Flight</string>

    <string name="thrust_header">Thrust at Liftoff</string>
    <string name="cost_header">Cost Per Launch</string>
    <string name="propellant1">Propellant 1</string>
    <string name="propellant2">Propellant 2</string>
    <string name="stages_header">Stages</string>
    <string name="height_header">Height</string>
    <string name="title_spacex">SpaceX</string>
    <string name="title_summary">Summary</string>

    <!-- Company Profile -->
    <string name="title_resources">Company Profile</string>
    <string name="title_founded_year">Founded</string>
    <string name="title_launch_count">Launch Count</string>
    <string name="title_launch_success">Successful Launches</string>
    <string name="title_launch_fails">Failed Launches</string>
    <string name="title_pending_launches">Pending Launches</string>
    <string name="spacex_pin_location">1 Rocket HQ, Hawthorne, California</string>
    <string name="title_headquarters">Location</string>
    <string name="show_headquarters_location_in_google_maps">Google Maps location of headquarters</string>

    <!-- Attribution / About -->
    <string name="flat_icon_attr">Boost icons created by Freepik - Flaticon</string>
    <string name="flat_icon_attr_url" translatable="false">https://www.flaticon.com/free-icons/boost</string>
    <string name="version_header">Build Version </string>
    <string name="version_text">%1$s %2$s</string>

    <string name="open_copied">Open</string>
    <string name="copied">Copied</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="device_info">Device info</string>

    <string name="powered_by">Powered by The Launch Library 2</string>

    <!-- Shared Preference Keys-->
    <string name="pref_key_mode_night">PREF_MODE_NIGHT</string>

</resources>