<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_article"
        android:title="@string/title_news" />


    <item
        android:id="@+id/navigation_capsules"
        android:icon="@drawable/ic_capsule"
        android:title="@string/title_capsules" />


    <item
        android:id="@+id/navigation_launches"
        android:icon="@drawable/ic_launches"
        android:title="@string/title_launches" />

    <item
        android:id="@+id/navigation_rockets"
        android:icon="@drawable/ic_rockets"
        android:title="@string/title_rockets" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info"
        android:title="@string/title_about" />

</menu>